--- a/pubs/index.html
+++ b/pubs/index.html
@@ -225,44 +225,364 @@ var _hmt = _hmt || [];
 </ul>
 <h2 id="publications">Publications</h2>
 <h3 id="articles">Articles</h3>
-<ol class="bibliography"><li>
-<p><span id="Qi2016Dispersive">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, Phys. Rev. A <b>93</b>, 023817 (2016).</span> <br></p>
+<ol class="bibliography"><li><!---->
+<span id="Qi2016Dispersive">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, Phys. Rev. A <b>93</b>, 023817 (2016).</span> <br/>
+<div id="Qi2016Dispersive-materials">
+<ul class="nav nav-pills">
+  <li>
+<a data-toggle="collapse" href="#Qi2016Dispersive-abstract">Abstract</a>
 </li>
 <li>
-<p><span id="Qi2015Dispersiveb">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, ArXiv e-Prints (2015).</span> <br></p>
+<a data-toggle="collapse" href="#Qi2016Dispersive-bibtex">BibTeX</a>
+</li>
+ <li>
+<a href="/assets/papers/Qi2016.pdf" target="_blank">Download</a>
+</li> 
+ <li>
+<a href="http://dx.doi.org/10.1103/PhysRevA.93.023817" target="_blank">Link</a>
+</li>
+
+<li>
+<a href="http://arxiv.org/abs/1509.02625 " target="_blank">arXiv</a>
+</li>
+
+<li>
+<a href="https://github.com/CQuIC/NanofiberPaper2014" target="_blank">Source</a>
+</li>
+<!--<li><img src="/assets/img/icon_google_scholar.png" height="10px"> <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=14591647056169599678" target="_blank">Cite</a></li>-->
+
+</ul>
+  <p id="Qi2016Dispersive-abstract" class="collapse">
+We study the strong coupling between photons and atoms that can be achieved in an optical nanofiber geometry when the interaction is dispersive. While the Purcell enhancement factor for spontaneous emission into the guided mode does not reach the strong-coupling regime for individual atoms, one can obtain high cooperativity for ensembles of a few thousand atoms due to the tight confinement of the guided modes and constructive interference over the entire chain of trapped atoms. We calculate the dyadic Green’s function, which determines the scattering of light by atoms in the presence of the fiber, and thus the phase shift and polarization rotation induced on the guided light by the trapped atoms. The Green’s function is related to a full Heisenberg-Langevin treatment of the dispersive response of the quantized field to tensor polarizable atoms. We apply our formalism to quantum nondemolition (QND) measurement of the atoms via polarimetry. We study shot-noise-limited detection of atom number for atoms in a completely mixed spin state and the squeezing of projection noise for atoms in clock states. Compared with squeezing of atomic ensembles in free space, we capitalize on unique features that arise in the nanofiber geometry including anisotropy of both the intensity and polarization of the guided modes. We use a first-principles stochastic master equation to model the squeezing as a function of time in the presence of decoherence due to optical pumping. We find a peak metrological squeezing of ∼5 dB is achievable with current technology for ∼2500 atoms trapped 180 nm from the surface of a nanofiber with radius a=225 nm.
+</p>
+<pre id="Qi2016Dispersive-bibtex" class="pre pre-scrollable collapse">@article{Qi2016Dispersive,
+  title = {Dispersive response of atoms trapped near the surface of an optical nanofiber with applications to quantum nondemolition measurement and spin squeezing},
+  author = {Qi, Xiaodong and Baragiola, Ben Q. and Jessen, Poul S. and Deutsch, Ivan H.},
+  journal = {Phys. Rev. A},
+  year = {2016},
+  month = feb,
+  number = {2},
+  pages = {023817},
+  volume = {93},
+  arxiv = {1509.02625 },
+  doi = {10.1103/PhysRevA.93.023817},
+  file = {/assets/papers/Qi2016.pdf},
+  repo = {https://github.com/CQuIC/NanofiberPaper2014},
+  grantnumber = {AFOSR-Y600242,NSF-PHY-1212445, NSF-PHY-1307520},
+  gsid = {14591647056169599678},
+  issue = {2},
+  numpages = {17},
+  owner = {qxd},
+  publicationdate = {February 11, 2016},
+  publisher = {American Physical Society},
+  submissiondate = {September 22, 2015},
+  timestamp = {2016.02.11},
+  url = {http://link.aps.org/doi/10.1103/PhysRevA.93.023817}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Liu2011Study">G. Liu, Y. Ning, and X. Qi, Optoelectronics Letters <b>7</b>, 105 (2011).</span> <br/>
+<div id="Liu2011Study-materials">
+<ul class="nav nav-pills">
+
+<li>
+<a data-toggle="collapse" href="#Liu2011Study-bibtex">BibTeX</a>
+</li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Liu2011Study-bibtex" class="pre pre-scrollable collapse">@article{Liu2011Study,
+  author = {Liu, Guangyu and Ning, Yongqiang and Qi, Xiaodong},
+  title = {Study of whispering-gallery-mode in a photonic crystal microcavity},
+  journal = {Optoelectronics Letters},
+  year = {2011},
+  volume = {7},
+  number = {2},
+  pages = {105--108},
+  __markedentry = {[qxd:6]}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Qi2011Modeling">X. Qi, ArXiv e-Prints (2011).</span> <br/>
+<div id="Qi2011Modeling-materials">
+<ul class="nav nav-pills">
+  <li>
+<a data-toggle="collapse" href="#Qi2011Modeling-abstract">Abstract</a>
 </li>
 <li>
-<p><span id="Liu2011Study">G.-yu Liu, Y.-qiang Ning, and X.-dong Qi, Optoelectronics Letters <b>7</b>, 105 (2011).</span> <br></p>
+<a data-toggle="collapse" href="#Qi2011Modeling-bibtex">BibTeX</a>
 </li>
+
+
 <li>
-<p><span id="Qi2011Modeling">X. Qi, ArXiv e-Prints (2011).</span> <br></p>
+<a href="http://arxiv.org/abs/1111.5532" target="_blank">arXiv</a>
 </li>
-<li>
-<p><span id="QI2010Surfacea">X.-dong QI, S.-juan YE, N. ZHANG, L. QIN, and L.-jun WANG, (2010).</span> <br></p>
+
+<!---->
+
+</ul>
+  <p id="Qi2011Modeling-abstract" class="collapse">
+This work is a theoretical investigation on the spin-polariton (polarized single photon) entanglement in nitrogen vacancy (NV) centers in diamond in order to interpret the results of two landmark experiments reported by the teams of Buckley and Togan in Science and Nature. A Jaynes-Cummings model is applied to analyze the off- and on-resonant dynamics of the electronic spin and polarized photon system. Combined with the analysis on the NV center’s electron structure and transition rules, this model consistently explained the Faraday effect, Optical Stark effect, pulse echo technology and energy level engineering technology in the way to realize the spin-polariton entanglement in diamond. All theoretical results are consistent well with the reported phenomena and data. This essay essentially aims at applying the fundamental skills the author has learned in Quantum Optics and Nonlinear Optics, especially to the interesting materials not covered in class, in assignments and examinations, such as calculation on matrix form of Hamiltonian, quantum optical dynamics with dressed state analysis, entanglement and so on.
+</p>
+<pre id="Qi2011Modeling-bibtex" class="pre pre-scrollable collapse">@article{Qi2011Modeling,
+  author = {Qi, Xiaodong},
+  title = {Modeling and deciphering on two spin-polariton entanglement experiments in NV center of diamond},
+  journal = {ArXiv e-prints},
+  year = {2011},
+  month = {\#nov\#},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {http://adsabs.harvard.edu/abs/2011arXiv1111.5532Q},
+  archiveprefix = {arXiv},
+  eprint = {1111.5532},
+  keywords = {Quantum Physics, Physics - Atomic Physics, Physics - Optics},
+  owner = {QXD},
+  primaryclass = {quant-ph},
+  timestamp = {2011.11.24}
+}
+</pre>
+</div>
 </li>
+<li><!---->
+<span id="Qi2010Surfacea">X. Qi, S. Ye, N. Zhang, L. Qin, and L. Wang, (2010).</span> <br/>
+<div id="Qi2010Surfacea-materials">
+<ul class="nav nav-pills">
+
 <li>
-<p><span id="Ye2010Emissiona">S. Ye, L. Qin, X. Qi, Y. Hu, N. Zhang, Y. Ning, and L. Wang, Zhongguo Jiguang(Chinese Journal of Lasers) <b>37</b>, 2371 (2010).</span> <br></p>
+<a data-toggle="collapse" href="#Qi2010Surfacea-bibtex">BibTeX</a>
 </li>
-<li>
-<p><span id="Ye2010Emission">叶淑娟, 秦莉, 戚晓东, 胡永生, 张楠, 宁永强, and 王立军, 中国激光 2371 (2010).</span> <br></p>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Qi2010Surfacea-bibtex" class="pre pre-scrollable collapse">@article{Qi2010Surfacea,
+  author = {Qi, Xiaodong and Ye, Shujuan and Zhang, Nan and Qin, Li and Wang, Lijun},
+  title = {Surface-emitting distributed-feedback semiconductor lasers and grating-coupled laser diodes},
+  year = {2010},
+  __markedentry = {[qxd:6]}
+}
+</pre>
+</div>
 </li>
+<li><!---->
+<span id="Ye2010Emissiona">S. Ye, L. Qin, X. Qi, Y. Hu, N. Zhang, Y. Ning, and L. Wang, Zhongguo Jiguang (Chinese Journal of Lasers) <b>37</b>, 2371 (2010).</span> <br/>
+<div id="Ye2010Emissiona-materials">
+<ul class="nav nav-pills">
+
 <li>
-<p><span id="Qi2010Surface">戚晓东, 叶淑娟, 张楠, 秦莉, and 王立军, 中国光学与应用光学 514 (2010).</span> <br></p>
+<a data-toggle="collapse" href="#Ye2010Emissiona-bibtex">BibTeX</a>
 </li>
-<li>
-<p><span id="Li2009Optical">李德华, 戚晓东, and 刘盛纲, 中国科学 技术科学 <b>39</b>, 745 (2009).</span> <br></p>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Ye2010Emissiona-bibtex" class="pre pre-scrollable collapse">@article{Ye2010Emissiona,
+  author = {Ye, Shujuan and Qin, Li and Qi, Xiaodong and Hu, Yongsheng and Zhang, Nan and Ning, Yongqiang and Wang, Lijun},
+  title = {Emission characteristics of second-order distributed feedback semiconductor lasers},
+  journal = {Zhongguo Jiguang (Chinese Journal of Lasers)},
+  year = {2010},
+  volume = {37},
+  number = {9},
+  pages = {2371--2375},
+  __markedentry = {[qxd:6]},
+  publisher = {Chinese Optical Society,| a P. O. Box 800-211| c Shanghai| z 201800| e zhgjgail. shcnc. ac. cn| u www. opticsjournal. net}
+}
+</pre>
+</div>
 </li>
+<li><!---->
+<span id="Ye2010Emission">叶淑娟, 秦莉, 戚晓东, 胡永生, 张楠, 宁永强, and 王立军, 中国激光 2371 (2010).</span> <br/>
+<div id="Ye2010Emission-materials">
+<ul class="nav nav-pills">
+
 <li>
-<p><span id="Li2008Optical">D. Li, X. Qi, Z. Wei, J. Tao, and S. Liu, Proc. SPIE <b>7277</b>, 727715 (2008).</span> <br></p>
+<a data-toggle="collapse" href="#Ye2010Emission-bibtex">BibTeX</a>
 </li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Ye2010Emission-bibtex" class="pre pre-scrollable collapse">@article{Ye2010Emission,
+  title = {二阶光栅分布反馈半导体激光器的出光特性},
+  author = {叶淑娟 and 秦莉 and 戚晓东 and 胡永生 and 张楠 and 宁永强 and 王立军},
+  journal = {中国激光},
+  number = {9},
+  pages = {2371--2375},
+  year = {2010}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Qi2010Surface">戚晓东, 叶淑娟, 张楠, 秦莉, and 王立军, 中国光学与应用光学 514 (2010).</span> <br/>
+<div id="Qi2010Surface-materials">
+<ul class="nav nav-pills">
+
 <li>
-<p><span id="Li2008theoretical">D. Li, X. Qi, and S. Liu, Science in China Series-E <b>51</b>, 2080 (2008).</span> <br></p>
+<a data-toggle="collapse" href="#Qi2010Surface-bibtex">BibTeX</a>
+</li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Qi2010Surface-bibtex" class="pre pre-scrollable collapse">@article{Qi2010Surface,
+  title = {面发射分布反馈半导体激光器及光栅耦合半导体激光器},
+  author = {戚晓东 and 叶淑娟 and 张楠 and 秦莉 and 王立军},
+  year = {2010},
+  journal = {中国光学与应用光学},
+  number = {5},
+  pages = {514-431}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Li2009Optical">李德华, 戚晓东, and 刘盛纲, 中国科学 技术科学 <b>39</b>, 745 (2009).</span> <br/>
+<div id="Li2009Optical-materials">
+<ul class="nav nav-pills">
+
+<li>
+<a data-toggle="collapse" href="#Li2009Optical-bibtex">BibTeX</a>
+</li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Li2009Optical-bibtex" class="pre pre-scrollable collapse">@article{Li2009Optical,
+  title = {光整流法产生THz辐射转化率的理论分析},
+  author = {李德华 and 戚晓东 and 刘盛纲},
+  journal = {中国科学 技术科学},
+  volume = {39},
+  number = {4},
+  pages = {745},
+  year = {2009}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Li2008Optical">D. Li, X. Qi, Z. Wei, J. Tao, and S. Liu, Proc. SPIE <b>7277</b>, 727715 (2008).</span> <br/>
+<div id="Li2008Optical-materials">
+<ul class="nav nav-pills">
+
+<li>
+<a data-toggle="collapse" href="#Li2008Optical-bibtex">BibTeX</a>
+</li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Li2008Optical-bibtex" class="pre pre-scrollable collapse">@article{Li2008Optical,
+  author = {Li, Dehua and Qi, Xiaodong and Wei, Zhou and Tao, Jin and Liu, Shenggang},
+  title = {Optical-to-THz conversion efficiency analysis and comparison of ZnTe, DAST, LiNbO3 crystals},
+  journal = {Proc. SPIE},
+  year = {2008},
+  volume = {7277},
+  pages = {727715},
+  __markedentry = {[qxd:6]}
+}
+</pre>
+</div>
+</li>
+<li><!---->
+<span id="Li2008theoretical">D. Li, X. Qi, and S. Liu, Science in China Series-E <b>51</b>, 2080 (2008).</span> <br/>
+<div id="Li2008theoretical-materials">
+<ul class="nav nav-pills">
+
+<li>
+<a data-toggle="collapse" href="#Li2008theoretical-bibtex">BibTeX</a>
+</li>
+
+
+
+
+<!---->
+
+</ul>
+
+<pre id="Li2008theoretical-bibtex" class="pre pre-scrollable collapse">@article{Li2008theoretical,
+  author = {Li, Dehua and Qi, Xiaodong and Liu, Shenggang},
+  title = {A theoretical analysis of optical-to-THz conversion efficiency via optical rectification},
+  journal = {Science in China Series-E},
+  year = {2008},
+  volume = {51},
+  number = {12},
+  pages = {2080--2088},
+  __markedentry = {[qxd:6]}
+}
+</pre>
+</div>
 </li></ol>
 
 <h3 id="theses">Theses</h3>
 <ol class="bibliography"></ol>
- <ol class="bibliography"><li>
-<p><span id="Qi2012effects">X. Qi, The Effects of Multi-Exciton Interactions on Optical Cavity Emission, Master’s thesis, Queen’s University, 2012.</span> <br></p>
+ <ol class="bibliography"><li><!---->
+<span id="Qi2012effects">X. Qi, The Effects of Multi-Exciton Interactions on Optical Cavity Emission, Master’s thesis, Queen’s University, 2012.</span> <br/>
+<div id="Qi2012effects-materials">
+<ul class="nav nav-pills">
+  <li>
+<a data-toggle="collapse" href="#Qi2012effects-abstract">Abstract</a>
+</li>
+<li>
+<a data-toggle="collapse" href="#Qi2012effects-bibtex">BibTeX</a>
+</li>
+
+<li>
+<a href="http://hdl.handle.net/1974/7337" target="_blank">Link</a>
+</li>
+
+
+
+<!---->
+
+</ul>
+  <p id="Qi2012effects-abstract" class="collapse">
+This thesis presents a theoretical study of the collective effects of a large number of photon emitters coupled to optical cavities. The ensemble effects are accounted for by considering both the light emitting and scattering by the photon emitters. It suggests that, to correctly estimate the emitters ensemble coupled cavity mode, it is necessary to consider the existence of the excited excitons ensemble and optical pumps. This thesis shows that optical pumps can excite more excitons and scattering channels as pumping power increases. The change in exciton population can lead to comprehensive spectral behaviors by changing the cavity spectral shapes, bandwidth and resonance positions, through the inhomogeneous broadening and frequencies repulsion effects of collective emissions. The existence of the exciton ensemble can also enhance optical coupling effects between target excitons and the cavity mode. The target exciton, which has a relatively large coupling strength and is close to the cavity peak, can affect the properties of the background dipoles and their coupling to the cavity. All these collective effects are sensitive to the number, the resonances distribution, and the optical properties of the background excitons in the frequency domain and the property of the target exciton, if any. This study provides a perspective on the control of the optical properties of cavities and individual excitons through collective excitation.
+</p>
+<pre id="Qi2012effects-bibtex" class="pre pre-scrollable collapse">@mastersthesis{Qi2012effects,
+  author = {Qi, Xiaodong},
+  title = {The effects of multi-exciton interactions on optical cavity emission},
+  school = {Queen's University},
+  year = {2012},
+  month = jul,
+  owner = {qxd},
+  timestamp = {2012.07.23},
+  url = {http://hdl.handle.net/1974/7337}
+}
+</pre>
+</div>
 </li></ol>
 
 
