--- a/research/index.html
+++ b/research/index.html
@@ -205,13 +205,12 @@ var _hmt = _hmt || [];
 <img src="/assets/img/NanofiberScheme.png"   width="680px"   align="center" alt="Spectroscopy on a nanofiber-trapped atom ensemble system"   />
 <figcaption>
 Fig 1. Polarization spectroscopy on an optical nanofiber coupled atomic ensemble system. Figure is adapted from <a href='http://journals.aps.org/pra/abstract/10.1103/PhysRevA.93.023817' target='_blank'>X. Qi, B. Q. Baragiola, P. S. Jessen, I. H. Deutsch, Phys. Rev. A 93, 023817(2016)</a>.
-</figcaption>
-</figure>
+</figcaption></figure>
 </div>
 <br><br>
 </center>
-<p>In addition, through establishing the theoretical foundation of light-atom interaction on the nanofiber platform, I hope to reach the regime of nonlinear interaction between photons for quantum simulations/computations/communications, and to deeply understand the quantum behaviors of atoms and photons and the role of nanophotonic geometries for better integratable photonic systems for quantum information processing.<br />
-Stay tuned!</p>
+
+<p>In addition, through establishing the theoretical foundation of light-atom interaction on the nanofiber platform, I hope to reach the regime of nonlinear interaction between photons for quantum simulations/computations/communications, and to deeply understand the quantum behaviors of atoms and photons and the role of nanophotonic geometries for better integratable photonic systems for quantum information processing.<br />Stay tuned!</p>
 <h2 id="current-research-group-and-main-collaborators">Current Research Group and Main Collaborators</h2>
 <ul>
 <li>Current research group: [Dr. Ivan Deutsch’s theoretical group] in <a href="http://cquic.org/">CQuIC</a>, University of New Mexico.</li>
@@ -219,7 +218,7 @@ Stay tuned!</p>
 <li><a href="http://physics.unm.edu/pandaweb/people/person.php?personID=1276">Dr. Yuan-Yu Jau</a> and <a href="http://physics.unm.edu/pandaweb/people/person.php?personID=971">Grant Biedermann</a>’s experimental group from the <a href="http://www.sandia.gov/mstc/quantum/index.html">Sandia National Labs on Quantum Systems</a>.</li>
 <li><a href="http://www.physics.umd.edu/rgroups/amo/orozco/">Dr. Luis A. Orozco’s Quantum Optics and Francium Spectroscopy group</a> (experimental)–mainly with group member <a href="http://jqi.umd.edu/people/pablo-solano">Pablo Solano</a> and his fellows, from the <a href="http://jqi.umd.edu/">Joint Quantum Institute</a>, University of Maryland.</li>
 </ul>
-<div id="refs" class="references">
+<div class="references">
 
 </div>
 
